## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcomp.a

libcomp_a_SOURCES = 		\
	comp.c		\
	compask.c	\
	compdefs.h	\
	compdel.c	\
	compdest.c	\
	compext.h	\
	compinit.c	\
	compinit.h	\
	compitf.h	\
	compload.c	\
	compmask.c	\
	compmdel.c	\
	compmpar.c	\
	compnoise.c	\
	compparam.c	\
	comppzld.c	\
	compsacl.c	\
	compsetup.c	\
	compsload.c	\
	compsprt.c	\
	compsset.c	\
	comptemp.c



INCLUDES = -I$(top_srcdir)/src/include
MAINTAINERCLEANFILES = Makefile.in
